# automated_essay_scoring

./: README.md  pyproject.toml
automated_essay_scoring/eda/: 2405100800_check_data.ipynb  2405120935_text_length_score.ipynb  2405120956_text_eda.ipynb  2405121218_valid.ipynb  2405161808_check_qwk_loss.ipynb  2405181314_check_qwk_loss_2.ipynb  2405191104_check_max_token.ipynb  24051911739_check_persuade.ipynb  2405191739_check_persuade.ipynb  2405250715_check_trainer_custom_model.ipynb  2405250715_check_trainer_custom_model_miss.ipynb  2405251952_topic_modeling.ipynb  2405252324_score_len_topic_only_kaggle_valid.ipynb  2406161444_stratify_score_len_prompt.ipynb  2406161458_stratify_score_len_group_prompt.ipynb  2406161527_half_st_slp_and_st_sl_g_p.ipynb  2406200716_stratify_score_len_prompt_wo_persuade.ipynb  2406200727_stratify_score_len_group_prompt_wo_persuade.ipynb  2406200735_half_st_slp_and_st_sl_g_p_wo_persuade.ipynb  2406220039_make_essay_id_prompt_dict.ipynb  2406222206_count_spelling_errors.ipynb  2406231717_count_spelling_errors.ipynb  240624_check_expand_qwk.ipynb  2406250700_tfidf_s_sl_g_p.ipynb  2406301417_tfidf_s_sl_g_p_wo_pca.ipynb  2406301713_word_tfidf_s_sl_g_p.ipynb  2406301747_char_tfidf_slp.ipynb  check_data.ipynb  check_model.ipynb
automated_essay_scoring/exp/: exp-fb-ridge.ipynb  exp001.ipynb  exp002.ipynb  exp003.ipynb  exp004.ipynb  exp005.ipynb  exp006.ipynb  exp007.ipynb  exp008.ipynb  exp009.ipynb  exp010.ipynb  exp011.ipynb  exp012.ipynb  exp013.ipynb  exp014.ipynb  exp015.ipynb  exp016.ipynb  exp017.ipynb  exp018.ipynb  exp019.ipynb  (+97 more)
